# AmpLowLatency

./: keystore.jks  settings.gradle
app/: build.gradle
app/release/: app-release.apk
app/src/androidTest/java/com/example/ampthreshold/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/HelloOboeEngine/: CMakeLists.txt  HelloOboeEngine.cpp  HelloOboeEngine.h  LatencyTuningCallback.h  jni_bridge.cpp
app/src/main/cpp/LiveEffect/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/example/ampthreshold/: LiveEffectEngine.java  MainActivity.java  MainService.java  PlaybackEngine.java  VAAmpThread.java  VAAudioThread.java  VAByteBuffer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ampthreshold/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
